# ChangeLog for x11-misc/lsw
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/ChangeLog,v 1.5 2009/10/25 17:17:14 tove Exp $

  25 Oct 2009; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove coldwind from metadata.xml (#181764)

  10 Oct 2009; Cédric Krier <cedk@gentoo.org> lsw-0.1.ebuild:
  Fix homepage

  30 Sep 2009; Jeroen Roovers <jer@gentoo.org> lsw-0.1.ebuild:
  Respect CC.

  10 Sep 2008; Santiago M. Mola <coldwind@gentoo.org> lsw-0.1.ebuild:
  amd64 stable

*lsw-0.1 (31 May 2008)

  31 May 2008; Santiago M. Mola <coldwind@gentoo.org> +metadata.xml,
  +lsw-0.1.ebuild:
  Initial ebuild, thanks to Cedric Krier.
