@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST lsw-0.1.tar.gz 2570 RMD160 61175862ed67b09272b296ab9fcfbf0b8ec02861 SHA1 4511a2af63820b5fcc918e3d010fb112933d3603 SHA256 2391b4d5c5368e0c8ccc1e4706e3826bdf77bdc63050af10344446511ddb26d7
-EBUILD lsw-0.1.ebuild 881 RMD160 b503671d3f1dfd544c472d19d4dbaa4f1f32318f SHA1 6145be4d566684a0fe71711370ca763fb80a884c SHA256 bc1e75f5a02f8b0fe116eced30623987afaa67793b5ee7d1a5b940547ecce58c
-MISC ChangeLog 702 RMD160 0366b9011856bb70b73db9d66d95c217ed7a8f8b SHA1 dcc1c86096f1c6dc490748cd2be4813beb5764f7 SHA256 79bd835877cabe435421bc67d9f7a30227c30631dfe288348ec17de5ae8d17ab
+DIST lsw-0.2.tar.gz 2946 RMD160 bc5689d9bbac37fb0aac38628a8a5ac12d79327a SHA1 ae32c246216094b748cb2c3edd5ec1a4612a5434 SHA256 307dcb49d5fd814ca58e3c7cae06008a0c68343b69847e59ddf0e34a555d5f60
+EBUILD lsw-0.1.ebuild 880 RMD160 964b99449e0cfbf3c7b9244303a08025d9a5d67f SHA1 52859ac0d74c675db63003395ba61f2b36e9ec8b SHA256 0f1ffcadfff4372803982ef06fde68ea106ff87a9ebd57902fbe423ba558f08f
+EBUILD lsw-0.2.ebuild 795 RMD160 5e5231bc8b9549b2bcbfda639b87d9e484206086 SHA1 8340c8db75f90d0f6b9c5b58da957f21e7b4fb31 SHA256 8a02de139cadd341cb30aaa8876da9d32c35071058de9d2bf159232ab500fecd
+MISC ChangeLog 858 RMD160 07269f58b35496dc94ab5f595810f06ff6fac9b0 SHA1 23e22cc928a5e7c7ad6608d2e6dae438612cf564 SHA256 a2294e9bec920cd482dad5a52c3491aafdabebe13ab8e819f6bd2d9c9284443b
 MISC metadata.xml 264 RMD160 4a42dacaf8b7d3d015cc213529aeebb4c14c00b1 SHA1 a3102166478c00c9fa25b067d0d6bb6c77b796db SHA256 7c5d86dda58d2fef2a5bbf9eb560745a6c0586224b8d9f941f6eaca9e1552c84
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAkrkiCAACgkQV3J2n04EauxASwCgpf36n79ABEZ0LYOvG5yuDzp5
-hUkAoNiAXo4j8s2+va4UrP+uNhemUbNH
-=GZyD
+iEYEARECAAYFAk3/k+oACgkQVWmRsqeSphONkgCeJt92P0zO4saqWRoJKkJPJxVN
+XS4AmgMOsWgQJbVQryxHLXeo7mp68q58
+=fiA3
 -----END PGP SIGNATURE-----
