@@ -1,12 +1,12 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/lsw-0.1.ebuild,v 1.4 2009/10/10 22:04:13 cedk Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/lsw-0.1.ebuild,v 1.5 2011/06/20 18:39:27 jer Exp $
 
 inherit toolchain-funcs
 
 DESCRIPTION="list window names"
 HOMEPAGE="http://tools.suckless.org/lsw"
-SRC_URI="http://suckless.org/download/${P}.tar.gz"
+SRC_URI="http://dl.suckless.org/tools/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
