@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/lsw
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/ChangeLog,v 1.5 2009/10/25 17:17:14 tove Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/ChangeLog,v 1.6 2011/06/20 18:39:27 jer Exp $
+
+*lsw-0.2 (20 Jun 2011)
+
+  20 Jun 2011; Jeroen Roovers <jer@gentoo.org> lsw-0.1.ebuild, +lsw-0.2.ebuild:
+  Version bump. Do not install nearly empty README.
 
   25 Oct 2009; Torsten Veller <tove@gentoo.org> metadata.xml:
   Remove coldwind from metadata.xml (#181764)
